изменил попап в html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
             <div class="profile__wrapper">
               <h1 class="profile__title">Жак-Ив Кусто</h1>
               <div class="profile__button">
-                <button type="button" class="profile__btn-editing popup__open">
+                <button
+                  type="button"
+                  class="profile__btn-editing profile__popup-open"
+                >
                   <img
                     src="./images/Edit-Button.svg"
                     alt="Редактирование профиля"
