--- a/index.html
+++ b/index.html
@@ -9,57 +9,68 @@
   </head>
   <body>
     <div class="page">
-      <header class="haeder container">
+      <header class="header container">
         <img src="./images/logo.svg" alt="Логотип сайта" class="logo" />
       </header>
       <main>
         <section class="section profile container">
           <div class="profile__user">
             <img
-              src="./images/Avatar.jpg"
+              src="./images/image.jpg"
               alt="Аватарка"
               class="profile__image"
             />
             <div class="profile__wrapper">
               <h1 class="profile__title">Жак-Ив Кусто</h1>
-              <div class="profile__button">
-                <button
-                  type="button"
-                  class="profile__btn-editing profile__popup-open"
-                >
-                  <img
-                    src="./images/Edit-Button.svg"
-                    alt="Редактирование профиля"
-                    class="profile__btn-icon"
-                  />
-                </button>
-              </div>
+              <button type="button" class="profile__btn-editing"></button>
               <p class="profile__subtitle">Исследователь океана</p>
             </div>
           </div>
-          <div class="profile__button">
-            <button type="button" class="profile__btn">
-              <img
-                src="./images/Vector-plus.svg"
-                alt="Кнопка добавления фото"
-                class="profile__btn-foto"
-              />
-            </button>
-          </div>
+          <button type="button" class="profile__btn"></button>
         </section>
         <section class="section elements container">
           <ul class="element">
             <li class="element__card">
               <img
-                src="./images/Mask-gora.jpg"
+                src="./images/Mask-Group.jpg"
                 alt="Горы"
                 class="element__image"
               />
               <div class="element__content">
                 <h2 class="element__title">Карачаевск</h2>
-                <button class="element__icon">
+                <button type="button" class="element__icon">
                   <img
-                    src="./images/Vector.png"
+                    src="./images/Vector.svg"
+                    alt="Лайк"
+                    class="element__btn-icon"
+                  />
+                </button>
+              </div>
+            </li>
+            <li class="element__card">
+              <img
+                src="./images/Mask-gora.jpg"
+                alt="Крепость"
+                class="element__image"
+              />
+              <div class="element__content">
+                <h2 class="element__title">Гора Эльбрус</h2>
+                <button type="button" class="element__icon">
+                  <img
+                    src="./images/Vector.svg"
+                    alt="Лайк"
+                    class="element__btn-icon"
+                  />
+                </button>
+              </div>
+            </li>
+            <li class="element__card">
+              <img src="./images/Mask.jpg" alt="Закат" class="element__image" />
+              <div class="element__content">
+                <h2 class="element__title">Домбай</h2>
+                <button type="button" class="element__icon">
+                  <img
+                    src="./images/Vector.svg"
                     alt="Лайк"
                     class="element__btn-icon"
                   />
@@ -74,9 +85,9 @@
               />
               <div class="element__content">
                 <h2 class="element__title">Гора Эльбрус</h2>
-                <button class="element__icon">
+                <button type="button" class="element__icon">
                   <img
-                    src="./images/Vector.png"
+                    src="./images/Vector.svg"
                     alt="Лайк"
                     class="element__btn-icon"
                   />
@@ -87,39 +98,9 @@
               <img src="./images/Mask.jpg" alt="Закат" class="element__image" />
               <div class="element__content">
                 <h2 class="element__title">Домбай</h2>
-                <button class="element__icon">
+                <button type="button" class="element__icon">
                   <img
-                    src="./images/Vector.png"
-                    alt="Лайк"
-                    class="element__btn-icon"
-                  />
-                </button>
-              </div>
-            </li>
-            <li class="element__card">
-              <img
-                src="./images/Mask-Group.jpg"
-                alt="Крепость"
-                class="element__image"
-              />
-              <div class="element__content">
-                <h2 class="element__title">Гора Эльбрус</h2>
-                <button class="element__icon">
-                  <img
-                    src="./images/Vector.png"
-                    alt="Лайк"
-                    class="element__btn-icon"
-                  />
-                </button>
-              </div>
-            </li>
-            <li class="element__card">
-              <img src="./images/Mask.jpg" alt="Закат" class="element__image" />
-              <div class="element__content">
-                <h2 class="element__title">Домбай</h2>
-                <button class="element__icon">
-                  <img
-                    src="./images/Vector.png"
+                    src="./images/Vector.svg"
                     alt="Лайк"
                     class="element__btn-icon"
                   />
@@ -134,9 +115,9 @@
               />
               <div class="element__content">
                 <h2 class="element__title">Карачаево-Черкессия</h2>
-                <button class="element__icon">
+                <button type="button" class="element__icon">
                   <img
-                    src="./images/Vector.png"
+                    src="./images/Vector.svg"
                     alt="Лайк"
                     class="element__btn-icon"
                   />
@@ -150,26 +131,26 @@
         <p class="footer__copyright">&copy;2023 Mesto Russia</p>
       </footer>
       <div class="popup">
-        <div class="popup__container">
-          <div class="popup__body">
-            <p class="popup__text">Редактировать профиль</p>
-            <form action="#" class="popup__action">
-              <input
-                type="text"
-                placeholder="Имя"
-                class="popup__text-user"
-                value="Жак - Ив Кусто"
-              />
-              <input
-                type="text"
-                placeholder="О себе"
-                class="popup__text-job"
-                value="Исследователь океана"
-              />
+        <div class="popup__body popup__body_active">
+          <h2 class="popup__text">Редактировать профиль</h2>
+          <form action="#" enctype="multipart/form-data" class="popup__action">
+            <input
+              type="text"
+              placeholder="Имя"
+              name="title"
+              class="popup__input popup__input_text_user"
+            />
+            <input
+              type="text"
+              placeholder="О себе"
+              name="subtitle"
+              class="popup__input popup__input_text_job"
+            />
+            <p class="popup__text-btn">
               <button type="submit" class="popup__save">Сохранить</button>
-            </form>
-            <div class="popup__close">&#10006;</div>
-          </div>
+            </p>
+          </form>
+          <button type="button" class="popup__close"></button>
         </div>
       </div>
     </div>
