--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   <img
                     src="./images/Vector.svg"
                     alt="Лайк"
-                    class="element__btn-icon"
+                    class="element__btn-icon"iuuo;
                   />
                 </button>
               </div>
