--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <footer class="footer container">
         <p class="footer__copyright">&copy;2023 Mesto Russia</p>
       </footer>
-      <div class="popup">
+      <div class="popup profile-popup">
         <div class="popup__container">
           <h2 class="popup__text">Редактировать профиль</h2>
           <form
