--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Место</title>
   </head>
   <body>
-
     <div class="page">
       <header class="header container">
         <img src="./images/logo.svg" alt="Логотип сайта" class="logo" />
@@ -36,29 +35,42 @@
       <footer class="footer container">
         <p class="footer__copyright">&copy;2023 Mesto Russia</p>
       </footer>
-      
+
       <div class="popup profile-popup">
         <div class="popup__container">
           <h2 class="popup__text">Редактировать профиль</h2>
           <form
             action="#"
             enctype="multipart/form-data"
-            name="window-input"
-            class="popup__action popup__action_profile"
+            name="form"
+            class="popup__form popup__action popup__action_profile"
+            novalidate
           >
             <input
+              id="input-name"
               type="text"
               placeholder="Имя"
               name="title"
               class="popup__input popup__input_text_user"
+              required
+              minlength="2"
+              maxlength="40"
             />
+            <span id="input-name-error" class="popup__error_visible"></span>
             <input
+              id="input-job"
               type="text"
               placeholder="О себе"
               name="subtitle"
               class="popup__input popup__input_text_job"
+              required
+              minlength="2"
+              maxlength="200"
             />
-            <button type="submit" class="popup__save">Сохранить</button>
+            <span id="input-job-error" class="popup__error_visible"></span>
+            <button type="submit" class="popup__button popup__save">
+              Сохранить
+            </button>
           </form>
           <button type="button" class="popup__close"></button>
         </div>
@@ -70,22 +82,34 @@
           <form
             action="#"
             enctype="multipart/form-data"
-            name="window-input"
-            class="popup__action popup__action_image"
+            name="form"
+            class="popup__form popup__action popup__action_image"
+            novalidate
           >
             <input
+              id="input-title"
               type="text"
               placeholder="Название"
               name="title"
               class="popup__input popup__input_text_image-name"
+              required
+              minlength="2"
+              maxlength="30"
             />
+            <span id="input-title-error" class="popup__error_visible"></span>
             <input
-              type="text"
+              id="input-link"
+              type="url"
               placeholder="Ссылка на картинку"
               name="subtitle"
               class="popup__input popup__input_text_image-link"
+              required
             />
-            <button type="submit" class="popup__save popup__save_image">
+            <span id="input-link-error" class="popup__error_visible"></span>
+            <button
+              type="submit"
+              class="popup__button popup__save popup__save_image"
+            >
               Сохранить
             </button>
           </form>
@@ -115,6 +139,7 @@
         </li>
       </template>
     </div>
+    <script src="./script/validate.js"></script>
     <script src="./script/script.js"></script>
   </body>
 </html>
