--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
       <footer class="footer container">
         <p class="footer__copyright">&copy;2023 Mesto Russia</p>
       </footer>
-
       <div class="popup profile-popup">
         <div class="popup__container">
           <h2 class="popup__text">Редактировать профиль</h2>
@@ -56,7 +55,7 @@
               minlength="2"
               maxlength="40"
             />
-            <span id="input-name-error" class="popup__error_visible"></span>
+            <span id="input-name-error" class="popup__error popup__error_visible"></span>
             <input
               id="input-job"
               type="text"
@@ -67,7 +66,7 @@
               minlength="2"
               maxlength="200"
             />
-            <span id="input-job-error" class="popup__error_visible"></span>
+            <span id="input-job-error" class="popup__error popup__error_visible"></span>
             <button type="submit" class="popup__button popup__save">
               Сохранить
             </button>
@@ -75,7 +74,6 @@
           <button type="button" class="popup__close"></button>
         </div>
       </div>
-
       <div class="popup popup_image">
         <div class="popup__container popup__container-image">
           <h2 class="popup__text popup__text_image">Новое место</h2>
@@ -96,7 +94,7 @@
               minlength="2"
               maxlength="30"
             />
-            <span id="input-title-error" class="popup__error_visible"></span>
+            <span id="input-title-error" class="popup__error popup__error_visible"></span>
             <input
               id="input-link"
               type="url"
@@ -105,7 +103,7 @@
               class="popup__input popup__input_text_image-link"
               required
             />
-            <span id="input-link-error" class="popup__error_visible"></span>
+            <span id="input-link-error" class="popup__error popup__error_visible"></span>
             <button
               type="submit"
               class="popup__button popup__save popup__save_image"
@@ -119,7 +117,6 @@
           ></button>
         </div>
       </div>
-
       <div class="popup popup_big">
         <div class="popup__container popup__container_big">
           <img class="popup-img popup-img_big" src="#" alt="#" />
@@ -127,7 +124,6 @@
           <button type="button" class="popup__close popup__close_big"></button>
         </div>
       </div>
-
       <template id="element__card-template">
         <li class="element__card">
           <img src="#" alt="#" class="element__image" />
