added an inactive button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
               minlength="2"
               maxlength="40"
             />
-            <span id="input-name-error" class="popup__error popup__error_visible"></span>
+            <span
+              id="input-name-error"
+              class="popup__error popup__error_visible"
+            ></span>
             <input
               id="input-job"
               type="text"
@@ -66,7 +69,10 @@
               minlength="2"
               maxlength="200"
             />
-            <span id="input-job-error" class="popup__error popup__error_visible"></span>
+            <span
+              id="input-job-error"
+              class="popup__error popup__error_visible"
+            ></span>
             <button type="submit" class="popup__button popup__save">
               Сохранить
             </button>
@@ -94,7 +100,10 @@
               minlength="2"
               maxlength="30"
             />
-            <span id="input-title-error" class="popup__error popup__error_visible"></span>
+            <span
+              id="input-title-error"
+              class="popup__error popup__error_visible"
+            ></span>
             <input
               id="input-link"
               type="url"
@@ -103,7 +112,10 @@
               class="popup__input popup__input_text_image-link"
               required
             />
-            <span id="input-link-error" class="popup__error popup__error_visible"></span>
+            <span
+              id="input-link-error"
+              class="popup__error popup__error_visible"
+            ></span>
             <button
               type="submit"
               class="popup__button popup__save popup__save_image"
