--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <button type="button" class="popup__close popup__close_big"></button>
         </div>
       </div>
-      <template id="element__card-template">
+      <template id="element__card-template" class="element__card-template">
         <li class="element__card">
           <img src="#" alt="#" class="element__image" />
           <button type="button" class="element__delete"></button>
@@ -147,7 +147,9 @@
         </li>
       </template>
     </div>
-    <script src="./script/validate.js"></script>
-    <script src="./script/script.js"></script>
+    <script src="./script/constants.js" type="module"></script>
+    <script src="./script/index.js" type="module"></script>
+    <script src="./script/Card.js" type="module"></script>
+    <script src="./script/FormValidator.js" type="module"></script>
   </body>
 </html>
