--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./pages/index.css" />
+
     <title>Место</title>
   </head>
   <body>
     <div class="page">
       <header class="header container">
-        <img src="./images/logo.svg" alt="Логотип сайта" class="logo" />
+        <img src="<%=require("./images/logo.svg")%>" alt="Логотип сайта"
+        class="logo" />
       </header>
       <main>
         <section class="section profile container">
           <div class="profile__user">
             <img
-              src="./images/image.jpg"
+              src="<%=require("./images/image.jpg")%>"
               alt="Аватарка"
               class="profile__image"
             />
@@ -151,16 +152,6 @@
           </div>
         </li>
       </template>
-
     </div>
-    <script src="./utils/constants.js" type="module"></script>
-    <script src="./pages/index.js" type="module"></script>
-    <script src="./components/Card.js" type="module"></script>
-    <script src="./components/FormValidator.js" type="module"></script>
-    <script src="./components/Section.js" type="module"></script>
-    <script src="./components/UserInfo.js" type="module"></script>
-    <script src="./components/Popup.js" type="module"></script>
-    <script src="./components/PopupWithImage.js" type="module"></script>
-    <script src="./components/PopupWithForm.js" type="module"></script>
   </body>
 </html>
