--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Место</title>
-  <script defer src="main.013c067b7f4fba549e75.js"></script></head>
+  <script defer src="main.0637c725f8d79c41e4e7.js"></script></head>
   <body>
     <div class="page">
       <header class="header container">
         <img src="images/logo.bbe2a6eafac19c3d031c.svg" alt="Логотип сайта"
         class="logo" />
       </header>
-      main>
+      <main>
         <section class="section profile container">
           <div class="profile__user">
             <div class="profile__avatar-wrapper">
