returned connection index.css

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <img src="<%=require("./images/logo.svg")%>" alt="Логотип сайта"
         class="logo" />
       </header>
-      main>
+      <main>
         <section class="section profile container">
           <div class="profile__user">
             <div class="profile__avatar-wrapper">
