--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Место</title>
-  <script defer src="main.0637c725f8d79c41e4e7.js"></script></head>
+  <script defer src="main.2c72e5e9b53d4777d6da.js"></script><link href="main.css" rel="stylesheet"></head>
   <body>
     <div class="page">
       <header class="header container">
